--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="logo">❄️ Ice Order</div>
         <nav>
-            <a href="main.html">Главная</a>
+            <a href="index.html">Главная</a>
             <a href="#">Акции</a>
             <a href="#">Правила</a>
             <a href="#">Контакты</a>
@@ -61,5 +61,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
