--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <title>Ice Order — Донат Minecraft PE</title>
+    <title>❄️ Ice Order — Донат Minecraft PE</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Главная</a>
             <a href="#">Акции</a>
-            <a href="#">Правила</a>
+            <a href="clases/rules/rules.html">Правила</a>
             <a href="#">Контакты</a>
         </nav>
     </header>
@@ -61,6 +61,5 @@
 
     <script src="script.js"></script>
 </body>
-
 
 </html>
