--- a/clases/rules/rules.html
+++ b/clases/rules/rules.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="logo">❄️ Ice Order</div>
         <nav>
-            <a href="index.html">Главная</a>
+            <a href="/index.html">Главная</a>
             <a href="#">Акции</a>
             <a href="/clases/rules/rules.html">Правила</a>
             <a href="#">Контакты</a>
