--- a/index.html
+++ b/index.html
@@ -24,34 +24,35 @@
         <h1>Добро пожаловать на Ice Order</h1>
         <p>Ледяной Minecraft PE сервер с уникальными возможностями ❄️</p>
 
-        <div class="items_slider" id="items_slider">
-            <div class="slide_item active" data-info="...">
-                <div class="img">
-                    <img src="/assets/image/item/51.png" alt="">
-                </div>
-                <p class="name">Барон</p>
-                <p class="price">от 15 РУБ</p>
+       <!-- Контейнер с фоном -->
+        <div class="category-selector fade-right">
+            <div class="navigation-prod">
+                <button class="tablinks active">
+                    <p>Привилегии</p>
+                    <div class="icon-prod type-privilege"></div>
+                </button>
+                <button class="tablinks">
+                    <p>Кейс с донатом</p>
+                    <div class="icon-prod type-donate"></div>
+                </button>
+                <button class="tablinks">
+                    <p>Кейс с монетами</p>
+                    <div class="icon-prod type-currency"></div>
+                </button>
+                <button class="tablinks">
+                    <p>Кейс с титулами</p>
+                    <div class="icon-prod type-title"></div>
+                </button>
+                <button class="tablinks">
+                    <p>Рубины</p>
+                    <div class="icon-prod type-rubine"></div>
+                </button>
+                <button class="tablinks">
+                    <p>Разное</p>
+                    <div class="icon-prod type-diff"></div>
+                </button>
             </div>
-
-            <div class="slide_item" data-info="...">
-                <div class="img">
-                    <img src="/assets/image/item/52.png" alt="">
-                </div>
-                <p class="name">Страж</p>
-                <p class="price">от 27 РУБ</p>
-            </div>
-
-            <div class="slide_item" data-info="...">
-                <div class="img">
-                    <img src="/assets/image/item/53.png" alt="">
-                </div>
-                <p class="name">Герой</p>
-                <p class="price">от 39 РУБ</p>
-            </div>
-
-            <!-- добавишь остальные товары по аналогии -->
         </div>
-
 
     </section>
 
