--- a/clases/contact/contact.html
+++ b/clases/contact/contact.html
@@ -14,9 +14,9 @@
         <div class="logo">❄️ Ice Order</div>
         <nav>
             <a href="/index.html">Главная</a>
-            <a href="#">Акции</a>
+            <a href="/clases/promotions/promotions.html">Акции</a>
             <a href="/clases/rules/rules.html">Правила</a>
-            <a href="#">Контакты</a>
+            <a href="/clases/contact/contact.html">Контакты</a>
         </nav>
     </header>
 
