--- a/index.html
+++ b/index.html
@@ -20,11 +20,226 @@
         </nav>
     </header>
 
+    <div class="mobile-menu">
+        <div class="container">
+            <div class="m-header">
+                <div class="logo">❄️ Ice Order</div>
+                <img class="menu_close" src="/assets/img/close.svg" alt="">
+            </div>
+            <div class="menu">
+                <a href="index.html">Главная</a>
+                <a href="/clases/promotions/promotions.html">Акции</a>
+                <a href="clases/rules/rules.html">Правила</a>
+                <a href="/clases/contact/contact.html">Контакты</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="responsive-main">
+        <div class="left">
+            <h4>Выберите режим</h4>
+            <div class="server-selector"><button class="tablinks active"><div class="icon-prod type-grief"></div><p>Лайт Анархия</p></button><button class="tablinks"><div class="icon-prod type-anarchy"></div><p>Классик Анархия</p></button></div>
+            <h4>Категории</h4>
+            <div class="category-selector fade-right">
+                <div class="navigation-prod"><button class="tablinks active" style=""><p>Привилегии</p><div class="icon-prod type-privilege"></div></button><button class="tablinks" style=""><p>Сапфиры и Коины</p><div class="icon-prod type-rubine"></div></button><button class="tablinks"
+                        style=""><p>Кейс с донатом</p><div class="icon-prod type-donate"></div></button><button class="tablinks" style=""><p>Кейс с сапфирами</p><div class="icon-prod type-currency"></div></button><button class="tablinks" style=""><p>Кейс с титулами</p><div class="icon-prod type-title"></div></button>
+                    <button class="tablinks" style="">
+                        <p>Контейнеры</p>
+                        <div class="icon-prod type-box"></div>
+                        </button><button class="tablinks" style=""><p>Разное</p><div class="icon-prod type-diff"></div></button><button class="tablinks" style="display: none;"><p>Привилегии</p><div class="icon-prod type-privilege"></div></button>
+                    <button class="tablinks" style="display: none;">
+                        <p>Кейс с донатом</p>
+                        <div class="icon-prod type-donate"></div>
+                        </button><button class="tablinks" style="display: none;"><p>Кейс с монетами</p><div class="icon-prod type-currency"></div></button><button class="tablinks" style="display: none;"><p>Кейс с титулами</p><div class="icon-prod type-title"></div></button>
+                    <button class="tablinks" style="display: none;">
+                            <p>Рубины</p>
+                            <div class="icon-prod type-rubine"></div>
+                            </button><button class="tablinks" style="display: none;"><p>Разное</p><div class="icon-prod type-diff"></div></button></div>
+            </div>
+        </div>
+        <div class="responsive-prod">
+            <div class="responsive-prod-header">
+                <h1>Привилегии</h1>
+                <div class="responsive-prod-group"><a href="/checkout" class="responsive-prod-button cart-button" tag="div"><i class="responsive-prod-icon prod-cart-icon"></i> История </a><select class="responsive-prod-button responsive-prod-select" style="display: none;"><option selected="" value="RUB">₽ (RUB) </option></select></div>
+            </div>
+            <div class="tabcontent tab-active">
+                <div mode="out-in" class="list-prod">
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/lite_custom.JPG" alt="Кастомный донат"></div>
+                        <div class="data-prod">
+                            <h1>Кастомный донат</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->3&nbsp;290 ₽</div>
+                                </div><a href="/payment/lite/custom" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/stajer.jpg" alt="СТАЖЁР (Хелпер)"></div>
+                        <div class="data-prod">
+                            <h1>СТАЖЁР (Хелпер)</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->3&nbsp;999 ₽</div>
+                                </div><a href="/payment/lite/stajer3" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/ETERNITY.jpg" alt="ETERNITY"></div>
+                        <div class="data-prod">
+                            <h1>ETERNITY</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->2&nbsp;190 ₽</div>
+                                </div><a href="/payment/lite/eternity" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/STINGER.jpg" alt="STINGER"></div>
+                        <div class="data-prod">
+                            <h1>STINGER</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->1&nbsp;390 ₽</div>
+                                </div><a href="/payment/lite/stinger" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/DRAGON.jpg" alt="DRAGON"></div>
+                        <div class="data-prod">
+                            <h1>DRAGON</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->999 ₽</div>
+                                </div><a href="/payment/lite/dragon" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/KRAKEN.jpg" alt="KRAKEN"></div>
+                        <div class="data-prod">
+                            <h1>KRAKEN</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->759 ₽</div>
+                                </div><a href="/payment/lite/kraken" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/WHITHER.jpg" alt="WITHER"></div>
+                        <div class="data-prod">
+                            <h1>WITHER</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->389 ₽</div>
+                                </div><a href="/payment/lite/wither" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/GHAST.jpg" alt="GHAST"></div>
+                        <div class="data-prod">
+                            <h1>GHAST</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->179 ₽</div>
+                                </div><a href="/payment/lite/ghast" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/MUSTANG.jpg" alt="MUSTANG"></div>
+                        <div class="data-prod">
+                            <h1>MUSTANG</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->59 ₽</div>
+                                </div><a href="/payment/lite/mustang" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                    <div class="item order-m-o">
+                        <div class="image-container">
+                            <!----><img class="item-image" src="/source/img/goods/GRIEFER.jpg" alt="GRIEFER"></div>
+                        <div class="data-prod">
+                            <h1>GRIEFER</h1>
+                            <div class="price-buy">
+                                <div class="t-price">
+                                    <div class="price price-from">
+                                        <div class="price-from-badge">От</div>
+                                        <!---->14 ₽</div>
+                                </div><a href="/payment/lite/griefer" class="default-button-a">Купить</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+            <div class="tabcontent">
+                <!---->
+            </div>
+        </div>
+    </div>
+
     <section class="hero">
         <h1>Добро пожаловать на Ice Order</h1>
         <p>Ледяной Minecraft PE сервер с уникальными возможностями ❄️</p>
 
-       <!-- Контейнер с фоном -->
+        <!-- Контейнер с фоном -->
         <div class="category-selector fade-right">
             <div class="navigation-prod">
                 <button class="tablinks active">
