--- a/index.html
+++ b/index.html
@@ -52,7 +52,30 @@
     </section>
 
     <section class="products" id="products">
-        <!-- Карточки товаров будут сюда -->
+        <div class="product-card">
+            <img src="assets/vip.png" alt="VIP">
+            <h3>VIP</h3>
+            <p class="desc">Лучший стартовый набор привилегий</p>
+            <div class="price">49 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="assets/premium.png" alt="Premium">
+            <h3>Premium</h3>
+            <p class="desc">Расширенные функции + бонусы</p>
+            <div class="price">89 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="assets/hero.png" alt="Hero">
+            <h3>Hero</h3>
+            <p class="desc">Максимальные возможности на сервере</p>
+            <div class="price">149 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
     </section>
 
     <footer class="footer">
