--- a/index.html
+++ b/index.html
@@ -53,26 +53,58 @@
 
     <section class="products" id="products">
         <div class="product-card">
-            <img src="assets/vip.png" alt="VIP">
-            <h3>VIP</h3>
+            <img src="/assets/image/item/51.png" alt="Frostling">
+            <h3>Frostling</h3>
             <p class="desc">Лучший стартовый набор привилегий</p>
             <div class="price">49 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
         <div class="product-card">
-            <img src="assets/premium.png" alt="Premium">
-            <h3>Premium</h3>
+            <img src="/assets/image/item/52.png" alt="Ice Knight">
+            <h3>Ice Knight</h3>
             <p class="desc">Расширенные функции + бонусы</p>
             <div class="price">89 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
         <div class="product-card">
-            <img src="assets/hero.png" alt="Hero">
-            <h3>Hero</h3>
+            <img src="/assets/image/item/53.png" alt="Snow Guardian">
+            <h3>Snow Guardian</h3>
             <p class="desc">Максимальные возможности на сервере</p>
             <div class="price">149 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="/assets/image/item/54.png" alt="Crystal Lord">
+            <h3>Crystal Lord</h3>
+            <p class="desc">Покашто пусто</p>
+            <div class="price">199 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="/assets/image/item/55.png" alt="Blizzard Emperor">
+            <h3>Blizzard Emperor</h3>
+            <p class="desc">Покашто пусто</p>
+            <div class="price">249 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="/assets/image/item/56.png" alt="FrostFire Titan">
+            <h3>FrostFire Titan</h3>
+            <p class="desc">Покашто пусто</p>
+            <div class="price">299 ₴</div>
+            <button class="buy-btn">Купить</button>
+        </div>
+
+        <div class="product-card">
+            <img src="/assets/image/item/57.png" alt="God Ise">
+            <h3>God Ice</h3>
+            <p class="desc">Покашто пусто</p>
+            <div class="price">349 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
