--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     </section>
 
     <section class="categories">
-        <div class="category tab active" data-tab="privileges">
+        <div class="category tab active" data-tab="privileges" id="prefix">
             <p>Привилегии</p>
         </div>
-        <div class="category tab" data-tab="cases-donate">
+        <div class="category tab" data-tab="cases-donate" id="case-don">
             <p>Кейс с донатом</p>
         </div>
-        <div class="category tab" data-tab="misc">
+        <div class="category tab" data-tab="misc" id="misc">
             <p>Разное</p>
         </div>
     </section>
