--- a/index.html
+++ b/index.html
@@ -109,6 +109,76 @@
         </div>
 
     </section>
+    <section class="tab-content">
+        <div class="tab-content" id="cases">
+
+        <div class="products">
+
+            <div class="product-card case">
+                <div class="product-icon">🎁</div>
+                    <h3>Кейс Доната</h3>
+                    <p>Случайная привилегия</p>
+                    <div class="price">149 ₽</div>
+                    <button>Открыть</button>
+                </div>
+
+                <div class="product-card case">
+                    <div class="product-icon">💎</div>
+                    <h3>Кейс Сапфиров</h3>
+                    <p>Валюта сервера</p>
+                    <div class="price">99 ₽</div>
+                    <button>Открыть</button>
+                </div>
+
+                <div class="product-card case">
+                    <div class="product-icon">👑</div>
+                    <h3>Кейс Титулов</h3>
+                    <p>Редкие титулы</p>
+                    <div class="price">199 ₽</div>
+                    <button>Открыть</button>
+                </div>
+
+            </div>
+
+        </div>
+
+
+        
+        <div class="tab-content" id="other">
+
+        <div class="products">
+
+            <div class="product-card other">
+                <div class="product-icon">💰</div>
+                    <h3>Сапфиры</h3>
+                    <p>Игровая валюта</p>
+                    <div class="price">50 ₽</div>
+                    <button>Купить</button>
+                </div>
+
+                <div class="product-card other">
+                    <div class="product-icon">🏷️</div>
+                    <h3>Титул</h3>
+                    <p>Уникальное звание</p>
+                    <div class="price">75 ₽</div>
+                    <button>Купить</button>
+                </div>
+
+                <div class="product-card other">
+                    <div class="product-icon">📦</div>
+                    <h3>Контейнер</h3>
+                    <p>Случайный предмет</p>
+                    <div class="price">120 ₽</div>
+                    <button>Купить</button>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
 
     <footer class="footer">
         <p>© 2025 Ice Order • Не связан с Mojang</p>
