--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="/assets/image/item/51.png" alt="Frostling">
             <h3>Frostling</h3>
             <p class="desc">Лучший стартовый набор привилегий</p>
-            <div class="price">49 ₴</div>
+            <div class="price">39 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -64,7 +64,7 @@
             <img src="/assets/image/item/52.png" alt="Ice Knight">
             <h3>Ice Knight</h3>
             <p class="desc">Расширенные функции + бонусы</p>
-            <div class="price">89 ₴</div>
+            <div class="price">79 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -72,7 +72,7 @@
             <img src="/assets/image/item/53.png" alt="Snow Guardian">
             <h3>Snow Guardian</h3>
             <p class="desc">Максимальные возможности на сервере</p>
-            <div class="price">149 ₴</div>
+            <div class="price">129 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -80,7 +80,7 @@
             <img src="/assets/image/item/54.png" alt="Crystal Lord">
             <h3>Crystal Lord</h3>
             <p class="desc">Покашто пусто</p>
-            <div class="price">199 ₴</div>
+            <div class="price">179 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -88,7 +88,7 @@
             <img src="/assets/image/item/55.png" alt="Blizzard Emperor">
             <h3>Blizzard Emperor</h3>
             <p class="desc">Покашто пусто</p>
-            <div class="price">249 ₴</div>
+            <div class="price">239 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -96,7 +96,7 @@
             <img src="/assets/image/item/56.png" alt="FrostFire Titan">
             <h3>FrostFire Titan</h3>
             <p class="desc">Покашто пусто</p>
-            <div class="price">299 ₴</div>
+            <div class="price">279 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -104,7 +104,7 @@
             <img src="/assets/image/item/57.png" alt="God Ise">
             <h3>God Ice</h3>
             <p class="desc">Покашто пусто</p>
-            <div class="price">349 ₴</div>
+            <div class="price">319 ₴</div>
             <button class="buy-btn">Купить</button>
         </div>
 
@@ -116,31 +116,14 @@
             <div class="products">
 
             <div class="product-card case">
-                <div class="product-icon">🎁</div>
-                    <h3>Кейс Доната</h3>
+                <div class="product-icon"></div>
+                    <img src="/assets/image/item/75.png" alt="case-prev">
+                    <h3>Кейс c Привилегиями</h3>
                     <p>Случайная привилегия</p>
-                    <div class="price">149 ₽</div>
-                    <button>Открыть</button>
+                    <div class="price">99 ₴</div>
+                    <button class="buy-btn">Купить</button>
                 </div>
-
-                <div class="product-card case">
-                    <div class="product-icon">💎</div>
-                    <h3>Кейс Сапфиров</h3>
-                    <p>Валюта сервера</p>
-                    <div class="price">99 ₽</div>
-                    <button>Открыть</button>
-                </div>
-
-                <div class="product-card case">
-                    <div class="product-icon">👑</div>
-                    <h3>Кейс Титулов</h3>
-                    <p>Редкие титулы</p>
-                    <div class="price">199 ₽</div>
-                    <button>Открыть</button>
-                </div>
-
             </div>
-
         </div>
 
 
@@ -150,33 +133,17 @@
             <div class="products">
 
             <div class="product-card other">
-                <div class="product-icon">💰</div>
-                    <h3>Сапфиры</h3>
-                    <p>Игровая валюта</p>
-                    <div class="price">50 ₽</div>
-                    <button>Купить</button>
-                </div>
 
                 <div class="product-card other">
-                    <div class="product-icon">🏷️</div>
-                    <h3>Титул</h3>
-                    <p>Уникальное звание</p>
-                    <div class="price">75 ₽</div>
-                    <button>Купить</button>
+                    <div class="product-icon"></div>
+                    <img src="/assets/image/item/61.png" alt="custom-pref">
+                    <h3>Custom PREFIX</h3>
+                    <p>Кастомний префикс для игрока.Являеться уникальним.</p>
+                    <div class="price">1199 ₴</div>
+                    <button class="buy-btn">Купить</button>
                 </div>
-
-                <div class="product-card other">
-                    <div class="product-icon">📦</div>
-                    <h3>Контейнер</h3>
-                    <p>Случайный предмет</p>
-                    <div class="price">120 ₽</div>
-                    <button>Купить</button>
-                </div>
-
             </div>
-
         </div>
-
 
     </section>
 
