--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <p>Ледяной Minecraft PE сервер с уникальными возможностями ❄️</p>
     </section>
 
+    <section class="categories">
+        <div class="category tab active" data-tab="donate" id="donate">
+                <p>Привилегии</p>
+        </div>
+    </section>
 
     <section class="products" id="products">
-        <div class="categories">
-            <div class="category tab active" data-tab="donate" id="donate">
-                <p>Привилегии</p>
-            </div>
-        </div>
 
         <div class="product-card">
             <img src="/assets/image/item/51.png" alt="Frostling">
