--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </header>
     <!-- Мобильное меню -->
     <nav class="mobile-nav" id="mobileNav">
-        <a href="index.html">Главная</a>
-        <a href="/clases/promotions/promotions.html">Акции</a>
-        <a href="clases/rules/rules.html">Правила</a>
-        <a href="/clases/contact/contact.html">Контакты</a>
+        <div class="menu">
+            <a href="index.html">Главная</a>
+            <a href="/clases/promotions/promotions.html">Акции</a>
+            <a href="clases/rules/rules.html">Правила</a>
+            <a href="/clases/contact/contact.html">Контакты</a>
+        </div>
     </nav>
 
     <section class="hero">
