--- a/clases/rules/rules.html
+++ b/clases/rules/rules.html
@@ -6,23 +6,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>❄️ Ice Order — Донат Minecraft PE</title>
-    <link rel="stylesheet" href="/clases/assets/styles/main-styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo">❄️ Ice Order</div>
-        <nav>
-            <a href="/index.html">Главная</a>
+    <header>
+        <div class="logo">
+            <p>❄️ Ice Order</p>
+        </div>
+        <nav class="desktop-nav">
+            <a href="index.html">Главная</a>
             <a href="/clases/promotions/promotions.html">Акции</a>
-            <a href="/clases/rules/rules.html">Правила</a>
+            <a href="clases/rules/rules.html">Правила</a>
             <a href="/clases/contact/contact.html">Контакты</a>
         </nav>
+        <div class="burger" id="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
-
-    <section class="hero">
-
-    </section>
+    <!-- Мобильное меню -->
+    <nav class="mobile-nav" id="mobileNav">
+        <a href="index.html">Главная</a>
+        <a href="/clases/promotions/promotions.html">Акции</a>
+        <a href="clases/rules/rules.html">Правила</a>
+        <a href="/clases/contact/contact.html">Контакты</a>
+    </nav>
 
     <footer class="footer">
         <p>© 2025 Ice Order • Не связан с Mojang</p>
