--- a/clases/contact/contact.html
+++ b/clases/contact/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <title>❄️ Ice Order — Донат Minecraft PE</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/assets/styles/main-styles.css" />
 </head>
 
 <body>
