--- a/clases/promotions/promotions.html
+++ b/clases/promotions/promotions.html
@@ -15,9 +15,9 @@
             <p>❄️ Ice Order</p>
         </div>
         <nav class="desktop-nav">
-            <a href="index.html">Главная</a>
+            <a href="/index.html">Главная</a>
             <a href="/clases/promotions/promotions.html">Акции</a>
-            <a href="clases/rules/rules.html">Правила</a>
+            <a href="/clases/rules/rules.html">Правила</a>
             <a href="/clases/contact/contact.html">Контакты</a>
         </nav>
         <div class="burger" id="burger">
