--- a/clases/rules/rules.html
+++ b/clases/rules/rules.html
@@ -15,7 +15,7 @@
             <p>❄️ Ice Order</p>
         </div>
         <nav class="desktop-nav">
-            <a href="index.html">Главная</a>
+            <a href="/index.html">Главная</a>
             <a href="/clases/promotions/promotions.html">Акции</a>
             <a href="clases/rules/rules.html">Правила</a>
             <a href="/clases/contact/contact.html">Контакты</a>
