--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!-- Мобильное меню -->
     <nav class="mobile-nav" id="mobileNav">
         <a href="index.html">Главная</a>
-        <a href="/clases/promotions/promotions.html">Акции</a>
-        <a href="clases/rules/rules.html">Правила</a>
-        <a href="/clases/contact/contact.html">Контакты</a>
+        <a href="/promotions/promotions.html">Акции</a>
+        <a href="/rules/rules.html">Правила</a>
+        <a href="/contact/contact.html">Контакты</a>
     </nav>
 
     <section class="hero">
